[gd_scene load_steps=6 format=3 uid="uid://da5sqmgi57nug"]

[ext_resource type="Script" uid="uid://cplxx1axgfy7j" path="res://game/editor/WorldEditor.gd" id="1_wkvmn"]
[ext_resource type="Texture2D" uid="uid://drpvf2eylwekl" path="res://data/Data_Regions.png" id="2_q1td4"]
[ext_resource type="Script" uid="uid://duqqr76i6pql" path="res://game/editor/editor_camera.gd" id="3_56bls"]
[ext_resource type="Script" uid="uid://craod5re1i4mo" path="res://game/editor/MB_diagnostics.gd" id="4_03qss"]
[ext_resource type="Script" uid="uid://c2wgyigm3vji0" path="res://game/lib/FPS.gd" id="6_6iers"]

[node name="Campaign Editor" type="Node2D"]
script = ExtResource("1_wkvmn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_q1td4")
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1844, 634)
script = ExtResource("3_56bls")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel_tools" type="Panel" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 30.0
offset_right = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel_tools"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SelectTool" type="Button" parent="CanvasLayer/Panel_tools/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Select"
flat = true

[node name="MoveTool" type="Button" parent="CanvasLayer/Panel_tools/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Move"
flat = true

[node name="PaintTool" type="Button" parent="CanvasLayer/Panel_tools/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Paint"
flat = true

[node name="EraseTool" type="Button" parent="CanvasLayer/Panel_tools/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Erase"
flat = true

[node name="Panel_region" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = 30.0

[node name="VB" type="VBoxContainer" parent="CanvasLayer/Panel_region"]
layout_mode = 0
offset_right = 269.0
offset_bottom = 343.0

[node name="GC" type="GridContainer" parent="CanvasLayer/Panel_region/VB"]
layout_mode = 2

[node name="Label_Colorcode_header" type="Label" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color Code"

[node name="Label_Colorcode" type="Label" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2

[node name="Label_Name" type="Label" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2
text = "Region Name"

[node name="LE_Name" type="LineEdit" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2

[node name="Label_Owner" type="Label" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2
text = "Owner"

[node name="OB_Owner" type="OptionButton" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2

[node name="HB" type="HBoxContainer" parent="CanvasLayer/Panel_region/VB"]
layout_mode = 2

[node name="Button_region_save" type="Button" parent="CanvasLayer/Panel_region/VB/HB"]
layout_mode = 2
text = "Save"

[node name="Button_region_close" type="Button" parent="CanvasLayer/Panel_region/VB/HB"]
layout_mode = 2
text = "Close"

[node name="Panel_toolbar" type="Panel" parent="CanvasLayer"]
offset_right = 1150.0
offset_bottom = 30.0

[node name="MB_diagnostics" type="MenuButton" parent="CanvasLayer/Panel_toolbar"]
layout_mode = 0
offset_left = 415.0
offset_top = 1.0
offset_right = 555.0
offset_bottom = 32.0
text = "Diagnostics"
script = ExtResource("4_03qss")

[node name="Panel_validation" type="Panel" parent="CanvasLayer"]
visible = false
offset_right = 1156.0
offset_bottom = 651.0

[node name="Panel_val_summary" type="Panel" parent="CanvasLayer/Panel_validation"]
layout_mode = 0
offset_left = 331.0
offset_top = 166.0
offset_right = 835.0
offset_bottom = 285.0

[node name="VB" type="VBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_summary"]
layout_mode = 0
offset_right = 501.0
offset_bottom = 118.0

[node name="HB_header" type="HBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB"]
layout_mode = 2

[node name="Label_header_summary" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB_header"]
layout_mode = 2
text = "Summary"

[node name="Button_close_validation" type="Button" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB_header"]
layout_mode = 2
text = "Close"

[node name="HB" type="HBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB"]
layout_mode = 2

[node name="Label_sum_regions" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB"]
layout_mode = 2
text = "Total Regions: "

[node name="Label_sum_regions_input" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB"]
layout_mode = 2

[node name="HB2" type="HBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB"]
layout_mode = 2

[node name="Label_sum_warnings" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB2"]
layout_mode = 2
text = "Total warnings: "

[node name="Label_sum_warnings_input" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB2"]
layout_mode = 2

[node name="Button_validation_details" type="Button" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB"]
layout_mode = 2
text = "Details"

[node name="Panel_val_details" type="Panel" parent="CanvasLayer/Panel_validation"]
visible = false
layout_mode = 0
offset_left = 331.0
offset_top = 289.0
offset_right = 834.0
offset_bottom = 369.0

[node name="SC" type="ScrollContainer" parent="CanvasLayer/Panel_validation/Panel_val_details"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 77.0

[node name="VB" type="VBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_details/SC"]
layout_mode = 2

[node name="FPS" type="Label" parent="CanvasLayer"]
offset_left = 9.0
offset_top = 7.0
offset_right = 49.0
offset_bottom = 30.0
script = ExtResource("6_6iers")

[connection signal="text_changed" from="CanvasLayer/Panel_region/VB/GC/LE_Name" to="." method="_on_le_name_text_changed"]
[connection signal="item_selected" from="CanvasLayer/Panel_region/VB/GC/OB_Owner" to="." method="_on_ob_owner_item_selected"]
[connection signal="button_up" from="CanvasLayer/Panel_region/VB/HB/Button_region_save" to="." method="_on_button_region_save_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_region/VB/HB/Button_region_close" to="." method="_on_button_region_close_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB_header/Button_close_validation" to="CanvasLayer/Panel_toolbar/MB_diagnostics" method="_on_button_close_validation_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_validation/Panel_val_summary/VB/Button_validation_details" to="CanvasLayer/Panel_toolbar/MB_diagnostics" method="_on_button_validation_details_button_up"]
